[package]
name = "rdp-rust"
version = "0.1.0"
authors = ["Roma22a"]
edition = "2018"

description = "A Simple Ramer–Douglas–Peucker Implematation"
repository = "https://github.com/Roma22a/rdp-rust"
keywords = ["ramer–douglas–peucker", "simplification", "polygon", "polyline"]
license = "MIT"

[dependencies]
